Добавил счетчик запросов, поправил скрипты сборки и запуска docker

--- a/web/template/index.html
+++ b/web/template/index.html
@@ -24,5 +24,6 @@
     </ul>
     <p><strong>Body</strong>: {{.Body}}</p>
     <p><strong>Content Length</strong>: {{.ContentLength}}</p>
+    <p><strong>Page requested</strong>: {{.RequestedCounter}}</p>
 </body>
 </html>
