--- a/web/template/index.html
+++ b/web/template/index.html
@@ -1,32 +1,16 @@
+{{define "index"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/static/image/favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="stylesheet" href="/static/style/index.css">
     <title>Http-info</title>
 </head>
 <body>
-    <p><strong>Address</strong>: <div id="remoteAddr">{{.RemoteAddr}}<div></p>
-    <p><strong>Proto</strong>: {{.Proto}}</p>
-    <p><strong>Method</strong>: {{.Method}}</p>
-    <p><strong>Host</strong>: {{.Host}}</p>
-    <p><strong>Url</strong>: {{.Url}}</p>
-    <p><strong>Request URI</strong>: {{.RequestURI}}</p>
-    <p><strong>Header</strong>:</p>
-    <ul>
-        {{range $key, $value := .Header}}
-            <li><strong>{{$key}}</strong>: 
-                {{range $value}}
-                    {{.}}
-                {{end}}
-            </li>
-        {{end}}
-    </ul>
-    <p><strong>Body</strong>: {{.Body}}</p>
-    <p><strong>Content Length</strong>: {{.ContentLength}}</p>
-    <p><strong>Page requested</strong>: {{.RequestedCounter}}</p>
-    <p><strong>Ip info</strong>: <pre><code id="ipInfo"></code><pre></p>
+    {{template "app" .}}
     <script src="/static/script/index.js"></script>
 </body>
 </html>
+{{end}}
