Переделал отображение результата запроса данных по IP

--- a/web/template/leftSide.html
+++ b/web/template/leftSide.html
@@ -1,7 +1,7 @@
 {{define "leftSide"}}
 <div class="leftSide">
     <div class="requestInfo">
-        <p><strong>Address</strong>: <div id="remoteAddr">{{.RemoteAddr}}</div></p>
+        <p><strong>Address</strong>: <span id="remoteAddr">{{.RemoteAddr}}</span></p>
         <p><strong>Proto</strong>: {{.Proto}}</p>
         <p><strong>Method</strong>: {{.Method}}</p>
         <p><strong>Host</strong>: {{.Host}}</p>
