--- a/web/static/style/index.css
+++ b/web/static/style/index.css
@@ -7,10 +7,21 @@
 
 .content {
     display: flex;
+    justify-content: center;
+}
+
+.contentLayout {
+    display: flex;
+    width: fit-content;
     flex-direction: row;
     justify-content: center;
-    gap: 5%;
+    gap: 25px;
     margin: 25px;
+    padding: 25px;
+    border-radius: 50px;
+    background: #e0e0e0;
+    box-shadow:  30px 30px 60px #808080,
+                -30px -30px 60px #ffffff;
 }
 
 .leftSide {
@@ -18,6 +29,11 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 5px;
+    padding: 25px 50px 25px 50px;
+    border-radius: 30px;
+    background: linear-gradient(145deg, #f0f0f0, #cacaca);
+    box-shadow:  30px 30px 60px #808080,
+                -30px -30px 60px #ffffff;
 }
 
 .rightSide {
@@ -25,4 +41,9 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 5px;
+    padding: 25px 50px 25px 50px;
+    border-radius: 30px;
+    background: linear-gradient(145deg, #f0f0f0, #cacaca);
+    box-shadow:  30px 30px 60px #808080,
+                -30px -30px 60px #ffffff;
 }
