--- a/web/template/content.html
+++ b/web/template/content.html
@@ -1,6 +1,8 @@
 {{define "content"}}
 <div class="content">
-    {{template "leftSide" .}}
-    {{template "rightSide" .}}
+    <div class="contentLayout">
+        {{template "leftSide" .}}
+        {{template "rightSide" .}}
+    </div>
 </div>
 {{end}}
