Установил шрифт 'Courier New', monospace для всего приложения
Close #2

--- a/web/static/style/index.css
+++ b/web/static/style/index.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 30px;
+    font-family: 'Courier New', monospace;
 }
 
 .content {
