--- a/web/static/style/index.css
+++ b/web/static/style/index.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     width: fit-content;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 25px;
     margin: 25px;
