--- a/web/static/style/index.css
+++ b/web/static/style/index.css
@@ -47,6 +47,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex: 1;
     gap: 5px;
     padding: 25px 50px 25px 50px;
     border-radius: 30px;
