--- a/web/static/style/index.css
+++ b/web/static/style/index.css
@@ -21,7 +21,7 @@ body {
 .contentLayout {
     display: flex;
     width: fit-content;
-    flex-direction: row;
+    flex-direction: column-reverse;
     flex-wrap: wrap;
     justify-content: center;
     gap: 25px;
